<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.franzandel.feature_home.presentation.fragment.DetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/collapsedAppBar"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/expandedAppBar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar_detail">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_500" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tl_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:background="@android:color/transparent"
                app:tabBackground="@drawable/tab_selector"
                app:tabGravity="center"
                app:tabIndicatorHeight="0dp" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                tools:title="@string/app_name" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            app:cardElevation="@dimen/margin_8"
            app:cardCornerRadius="@dimen/margin_4">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_released_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_8"
                    android:text="@string/detail_released_title"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_released"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="2011-11-11"
                    android:lineSpacingExtra="@dimen/margin_4"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginStart="@dimen/margin_16"
                    app:layout_constraintTop_toBottomOf="@+id/tv_released_title"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_platforms_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_16"
                    android:text="@string/detail_platforms_title"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_released" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_platforms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Nintendo Switch\nX-box One\nPC"
                    android:lineSpacingExtra="@dimen/margin_4"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginStart="@dimen/margin_16"
                    app:layout_constraintTop_toBottomOf="@+id/tv_platforms_title"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_genres_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginStart="@dimen/margin_8"
                    android:text="@string/detail_genres_title"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_platforms" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Action\nAdventure\nRPG"
                    android:layout_marginTop="@dimen/margin_8"
                    android:lineSpacingExtra="@dimen/margin_4"
                    android:layout_marginStart="@dimen/margin_16"
                    app:layout_constraintTop_toBottomOf="@+id/tv_genres_title"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/g_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_stores_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginStart="@dimen/margin_8"
                    android:text="@string/detail_stores_title"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_16"
                    app:layout_constraintStart_toStartOf="@+id/g_detail"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_stores"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="@dimen/margin_4"
                    tools:text="GOG\nPlayStation Store\nSteam\nX-box Store"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginStart="@dimen/margin_16"
                    app:layout_constraintTop_toBottomOf="@+id/tv_stores_title"
                    app:layout_constraintStart_toStartOf="@+id/g_detail" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_tags_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginStart="@dimen/margin_8"
                    android:text="@string/detail_tags_title"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_16"
                    app:layout_constraintStart_toStartOf="@+id/g_detail"
                    app:layout_constraintTop_toBottomOf="@+id/tv_stores" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="@dimen/margin_4"
                    tools:text="Single player\nAtmospheric\nFull controller support\nGreat Soundtrack\nRPG"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginStart="@dimen/margin_16"
                    android:paddingBottom="@dimen/margin_8"
                    app:layout_constraintTop_toBottomOf="@+id/tv_tags_title"
                    app:layout_constraintStart_toStartOf="@+id/g_detail" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_8"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/fab_favorite_selector"
        tools:ignore="ContentDescription" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>